fixed issue with non-focussed results being shifted 1px to the right upon focussing

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -66,6 +66,7 @@ body {
   border-radius: 6px;
   -moz-border-radius: 6px;
   padding: 3%;
+  border: 1px solid transparent;
 }
 
 .focussed {
